force-app/main/default/objects/Game_Session__c/fields/Board_State__c.field-meta.xml
<CustomField>
    <fullName>Board_State__c</fullName>
    <description>JSON representation of the game board state</description>
    <label>Board State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>