force-app/main/default/objects/Game_Session__c/fields/Current_Player__c.field-meta.xml
<CustomField>
    <fullName>Current_Player__c</fullName>
    <label>Current Player</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
                <default>true</default>
                <label>X</label>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>