force-app/main/default/objects/Game_Session__c/fields/Is_Draw__c.field-meta.xml
<CustomField>
    <fullName>Is_Draw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Draw</label>
    <type>Checkbox</type>
</CustomField>