force-app/main/default/objects/Game_Session__c/fields/Last_Move_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Move_Time__c</fullName>
    <label>Last Move Time</label>
    <type>DateTime</type>
</CustomField>