force-app/main/default/objects/Game_Session__c/fields/Player_O__c.field-meta.xml
<CustomField>
    <fullName>Player_O__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player O</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Game Sessions (Player O)</relationshipLabel>
    <relationshipName>Game_Sessions_Player_O</relationshipName>
    <type>Lookup</type>
</CustomField>