force-app/main/default/objects/Game_Session__c/fields/Player_X__c.field-meta.xml
<CustomField>
    <fullName>Player_X__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player X</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Game Sessions (Player X)</relationshipLabel>
    <relationshipName>Game_Sessions_Player_X</relationshipName>
    <type>Lookup</type>
</CustomField>