force-app/main/default/objects/Game_Session__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Game Sessions (Winner)</relationshipLabel>
    <relationshipName>Game_Sessions_Winner</relationshipName>
    <type>Lookup</type>
</CustomField>