force-app/main/default/objects/Game_Session__c/fields/Winning_Line__c.field-meta.xml
<CustomField>
    <fullName>Winning_Line__c</fullName>
    <description>JSON array of winning cell positions</description>
    <label>Winning Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>