force-app/main/default/objects/Game_Session__c/validationRules/Players_Cannot_Be_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Players_Cannot_Be_Same</fullName>
    <active>true</active>
    <description>Prevents a player from playing against themselves</description>
    <errorConditionFormula>Player_X__c = Player_O__c</errorConditionFormula>
    <errorDisplayField>Player_O__c</errorDisplayField>
    <errorMessage>A player cannot play against themselves. Please select a different opponent.</errorMessage>
</ValidationRule>